--- a/module-2/lab-matplotlib-seaborn/your-code/challenge-2.ipynb
+++ b/module-2/lab-matplotlib-seaborn/your-code/challenge-2.ipynb
@@ -23,18 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import libraries here\n",
     "import pandas as pd\n",
-    "'''\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline\n",
-    "'''"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -48,13 +47,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Calorie burned</th>\n",
+       "      <th>Steps</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>Floors</th>\n",
+       "      <th>Minutes Sedentary</th>\n",
+       "      <th>Minutes Lightly Active</th>\n",
+       "      <th>Minutes Fairly Active</th>\n",
+       "      <th>Minutes Very Active</th>\n",
+       "      <th>Activity Calories</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Distance_miles</th>\n",
+       "      <th>Days</th>\n",
+       "      <th>Days_encoded</th>\n",
+       "      <th>Work_or_Weekend</th>\n",
+       "      <th>Hours Sleep</th>\n",
+       "      <th>Sleep efficiency</th>\n",
+       "      <th>Yesterday_sleep</th>\n",
+       "      <th>Yesterday_sleep_efficiency</th>\n",
+       "      <th>Months</th>\n",
+       "      <th>Months_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-05-08</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>905</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.355</td>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1680</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.403891</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.400000</td>\n",
+       "      <td>92.086331</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>May</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-05-09</td>\n",
+       "      <td>3631</td>\n",
+       "      <td>18925</td>\n",
+       "      <td>14.11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>611.000</td>\n",
+       "      <td>316</td>\n",
+       "      <td>61</td>\n",
+       "      <td>60</td>\n",
+       "      <td>2248</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.767545</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.566667</td>\n",
+       "      <td>92.464358</td>\n",
+       "      <td>6.400000</td>\n",
+       "      <td>92.086331</td>\n",
+       "      <td>May</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-05-10</td>\n",
+       "      <td>3204</td>\n",
+       "      <td>14228</td>\n",
+       "      <td>10.57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>602.000</td>\n",
+       "      <td>226</td>\n",
+       "      <td>14</td>\n",
+       "      <td>77</td>\n",
+       "      <td>1719</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.567891</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.450000</td>\n",
+       "      <td>88.761468</td>\n",
+       "      <td>7.566667</td>\n",
+       "      <td>92.464358</td>\n",
+       "      <td>May</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  Calorie burned  Steps  Distance  Floors  Minutes Sedentary  \\\n",
+       "0  2015-05-08            1934    905      0.65       0              1.355   \n",
+       "1  2015-05-09            3631  18925     14.11       4            611.000   \n",
+       "2  2015-05-10            3204  14228     10.57       1            602.000   \n",
+       "\n",
+       "   Minutes Lightly Active  Minutes Fairly Active  Minutes Very Active  \\\n",
+       "0                      46                      0                    0   \n",
+       "1                     316                     61                   60   \n",
+       "2                     226                     14                   77   \n",
+       "\n",
+       "   Activity Calories  ...  Distance_miles      Days  Days_encoded  \\\n",
+       "0               1680  ...        0.403891    Friday           4.0   \n",
+       "1               2248  ...        8.767545  Saturday           5.0   \n",
+       "2               1719  ...        6.567891    Sunday           6.0   \n",
+       "\n",
+       "   Work_or_Weekend  Hours Sleep Sleep efficiency  Yesterday_sleep  \\\n",
+       "0                1     6.400000        92.086331         0.000000   \n",
+       "1                0     7.566667        92.464358         6.400000   \n",
+       "2                0     6.450000        88.761468         7.566667   \n",
+       "\n",
+       "   Yesterday_sleep_efficiency  Months  Months_encoded  \n",
+       "0                    0.000000     May               5  \n",
+       "1                   92.086331     May               5  \n",
+       "2                   92.464358     May               5  \n",
+       "\n",
+       "[3 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fitbit=pd.read_csv('Fitbit2.csv')\n",
     "\n",
-    "fitbit.head()"
+    "fitbit.head(3)"
    ]
   },
   {
@@ -128,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
