--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -187,11 +187,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Typical Hours    25161\n",
+       "Annual Salary     8022\n",
+       "Hourly Rate      25161\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "null_cols = salaries.columns[salaries.isnull().any()]\n",
+    "salaries[null_cols].isnull().sum()"
    ]
   },
   {
@@ -203,12 +219,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salary    25161\n",
+       "Hourly     8022\n",
+       "Name: Salary or Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "col_salary = salaries[\"Salary or Hourly\"].value_counts()\n",
+    "col_salary"
    ]
   },
   {
@@ -227,11 +257,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "POLICE                   13414\n",
+       "FIRE                      4641\n",
+       "STREETS & SAN             2198\n",
+       "OEMC                      2102\n",
+       "WATER MGMNT               1879\n",
+       "AVIATION                  1629\n",
+       "TRANSPORTN                1140\n",
+       "PUBLIC LIBRARY            1015\n",
+       "GENERAL SERVICES           980\n",
+       "FAMILY & SUPPORT           615\n",
+       "FINANCE                    560\n",
+       "HEALTH                     488\n",
+       "CITY COUNCIL               411\n",
+       "LAW                        407\n",
+       "BUILDINGS                  269\n",
+       "COMMUNITY DEVELOPMENT      207\n",
+       "BUSINESS AFFAIRS           171\n",
+       "COPA                       116\n",
+       "BOARD OF ELECTION          107\n",
+       "DoIT                        99\n",
+       "PROCUREMENT                 92\n",
+       "INSPECTOR GEN               87\n",
+       "MAYOR'S OFFICE              85\n",
+       "CITY CLERK                  84\n",
+       "ANIMAL CONTRL               81\n",
+       "HUMAN RESOURCES             79\n",
+       "CULTURAL AFFAIRS            65\n",
+       "BUDGET & MGMT               46\n",
+       "ADMIN HEARNG                39\n",
+       "DISABILITIES                28\n",
+       "TREASURER                   22\n",
+       "HUMAN RELATIONS             16\n",
+       "BOARD OF ETHICS              8\n",
+       "POLICE BOARD                 2\n",
+       "LICENSE APPL COMM            1\n",
+       "Name: Department, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries[\"Department\"].value_counts()\n"
    ]
   },
   {
@@ -245,11 +322,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=20.6198057854942, pvalue=4.3230240486229894e-92)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from scipy.stats import ttest_1samp, stats, t, sem\n",
+    "\n",
+    "stats.ttest_1samp(salaries[salaries[\"Hourly Rate\"].isna()==False][\"Hourly Rate\"], 30)"
    ]
   },
   {
@@ -263,11 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=3.081997005712994, pvalue=0.0020603403550965137)"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "polis= salaries[(salaries[\"Salary or Hourly\"]==\"Salary\") & (salaries[\"Department\"]==\"POLICE\")]\n",
+    "\n",
+    "stats.ttest_1samp(polis[\"Annual Salary\"], 86000)"
    ]
   },
   {
@@ -279,11 +383,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Hourly</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Department</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>STREETS &amp; SAN</th>\n",
+       "      <td>1862</td>\n",
+       "      <td>336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WATER MGMNT</th>\n",
+       "      <td>1513</td>\n",
+       "      <td>366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OEMC</th>\n",
+       "      <td>1273</td>\n",
+       "      <td>829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AVIATION</th>\n",
+       "      <td>1082</td>\n",
+       "      <td>547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GENERAL SERVICES</th>\n",
+       "      <td>765</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Salary or Hourly  Hourly  Salary\n",
+       "Department                      \n",
+       "STREETS & SAN       1862     336\n",
+       "WATER MGMNT         1513     366\n",
+       "OEMC                1273     829\n",
+       "AVIATION            1082     547\n",
+       "GENERAL SERVICES     765     215"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "pd.crosstab(salaries[\"Department\"], salaries[\"Salary or Hourly\"], dropna=False).sort_values(\"Hourly\", ascending=False).head()"
    ]
   },
   {
@@ -295,11 +475,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-9.567447887848152, pvalue=3.3378530564707717e-21)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "stats.ttest_1samp(salaries[salaries[\"Department\"]==\"STREETS & SAN\"][\"Hourly Rate\"].dropna(axis=0), 35)"
    ]
   },
   {
@@ -323,11 +515,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32.780077183391256, 32.79703824916922)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries1 = salaries[salaries[\"Salary or Hourly\"]==\"Hourly\"]\n",
+    "t.interval(0.05, (len(salaries1)-1), loc=salaries1[\"Hourly Rate\"].mean(), scale=salaries1[\"Hourly Rate\"].sem())"
    ]
   },
   {
@@ -339,11 +544,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(86476.5176546444, 86496.31135162238)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "t.interval(0.05, (len(polis)-1), loc=polis[\"Annual Salary\"].mean(), scale=polis[\"Annual Salary\"].sem())"
    ]
   },
   {
@@ -361,12 +578,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from statsmodels.stats.proportion import proportions_ztest"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-3.5099964213703005, 0.0004481127249057967)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "proportions_ztest(len(salaries1), len(salaries), 0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
