--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -16,7 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy and pandas\n"
+    "# import numpy and pandas\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,11 +50,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101592.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABAD JR,  VICENTE M</td>\n",
+       "      <td>CIVIL ENGINEER IV</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110064.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABASCAL,  REECE E</td>\n",
+       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name                              Job Titles  \\\n",
+       "0    AARON,  JEFFERY M                                SERGEANT   \n",
+       "1      AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2  AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
+       "3  ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
+       "4    ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
+       "\n",
+       "         Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0            POLICE                 F           Salary            NaN   \n",
+       "1            POLICE                 F           Salary            NaN   \n",
+       "2  GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3       WATER MGMNT                 F           Salary            NaN   \n",
+       "4              OEMC                 P           Hourly           20.0   \n",
+       "\n",
+       "   Annual Salary  Hourly Rate  \n",
+       "0       101442.0          NaN  \n",
+       "1        94122.0          NaN  \n",
+       "2       101592.0          NaN  \n",
+       "3       110064.0          NaN  \n",
+       "4            NaN        19.86  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries.head()\n",
+    "\n"
    ]
   },
   {
@@ -64,11 +187,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name                     0\n",
+       "Job Titles               0\n",
+       "Department               0\n",
+       "Full or Part-Time        0\n",
+       "Salary or Hourly         0\n",
+       "Typical Hours        25161\n",
+       "Annual Salary         8022\n",
+       "Hourly Rate          25161\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries.isnull().sum()"
    ]
   },
   {
@@ -80,12 +223,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salary    25161\n",
+       "Hourly     8022\n",
+       "Name: Salary or Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "salaries['Salary or Hourly'].value_counts()"
    ]
   },
   {
@@ -104,11 +261,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "POLICE                   13414\n",
+       "FIRE                      4641\n",
+       "STREETS & SAN             2198\n",
+       "OEMC                      2102\n",
+       "WATER MGMNT               1879\n",
+       "AVIATION                  1629\n",
+       "TRANSPORTN                1140\n",
+       "PUBLIC LIBRARY            1015\n",
+       "GENERAL SERVICES           980\n",
+       "FAMILY & SUPPORT           615\n",
+       "FINANCE                    560\n",
+       "HEALTH                     488\n",
+       "CITY COUNCIL               411\n",
+       "LAW                        407\n",
+       "BUILDINGS                  269\n",
+       "COMMUNITY DEVELOPMENT      207\n",
+       "BUSINESS AFFAIRS           171\n",
+       "COPA                       116\n",
+       "BOARD OF ELECTION          107\n",
+       "DoIT                        99\n",
+       "PROCUREMENT                 92\n",
+       "INSPECTOR GEN               87\n",
+       "MAYOR'S OFFICE              85\n",
+       "CITY CLERK                  84\n",
+       "ANIMAL CONTRL               81\n",
+       "HUMAN RESOURCES             79\n",
+       "CULTURAL AFFAIRS            65\n",
+       "BUDGET & MGMT               46\n",
+       "ADMIN HEARNG                39\n",
+       "DISABILITIES                28\n",
+       "TREASURER                   22\n",
+       "HUMAN RELATIONS             16\n",
+       "BOARD OF ETHICS              8\n",
+       "POLICE BOARD                 2\n",
+       "LICENSE APPL COMM            1\n",
+       "Name: Department, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries['Department'].value_counts()"
    ]
   },
   {
@@ -122,11 +326,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>8022.000000</td>\n",
+       "      <td>25161.000000</td>\n",
+       "      <td>8022.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>34.507604</td>\n",
+       "      <td>86786.999790</td>\n",
+       "      <td>32.788558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>9.252077</td>\n",
+       "      <td>21041.354602</td>\n",
+       "      <td>12.112573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>7200.000000</td>\n",
+       "      <td>2.650000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>76266.000000</td>\n",
+       "      <td>21.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>90024.000000</td>\n",
+       "      <td>35.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>96060.000000</td>\n",
+       "      <td>40.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>300000.000000</td>\n",
+       "      <td>109.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Typical Hours  Annual Salary  Hourly Rate\n",
+       "count    8022.000000   25161.000000  8022.000000\n",
+       "mean       34.507604   86786.999790    32.788558\n",
+       "std         9.252077   21041.354602    12.112573\n",
+       "min        10.000000    7200.000000     2.650000\n",
+       "25%        20.000000   76266.000000    21.200000\n",
+       "50%        40.000000   90024.000000    35.600000\n",
+       "75%        40.000000   96060.000000    40.200000\n",
+       "max        40.000000  300000.000000   109.000000"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "salaries.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=20.90583579963656, pvalue=1.522330801404414e-94)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "from scipy.stats import ttest_1samp\n",
+    "hourly = np.random.normal(salaries['Hourly Rate'].mean(),salaries['Hourly Rate'].std() , 8022)\n",
+    "ttest_1samp(hourly, 30)"
    ]
   },
   {
@@ -140,11 +463,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=5.616634519123018, pvalue=1.9676771872252815e-08)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "yearly = np.random.normal(salaries['Annual Salary'].mean(),salaries['Annual Salary'].std() , 25161)\n",
+    "ttest_1samp(yearly, 86000)"
    ]
   },
   {
@@ -156,11 +492,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Hourly</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Department</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>STREETS &amp; SAN</th>\n",
+       "      <td>1862</td>\n",
+       "      <td>336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WATER MGMNT</th>\n",
+       "      <td>1513</td>\n",
+       "      <td>366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OEMC</th>\n",
+       "      <td>1273</td>\n",
+       "      <td>829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AVIATION</th>\n",
+       "      <td>1082</td>\n",
+       "      <td>547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GENERAL SERVICES</th>\n",
+       "      <td>765</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Salary or Hourly  Hourly  Salary\n",
+       "Department                      \n",
+       "STREETS & SAN       1862     336\n",
+       "WATER MGMNT         1513     366\n",
+       "OEMC                1273     829\n",
+       "AVIATION            1082     547\n",
+       "GENERAL SERVICES     765     215"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "pd.crosstab(salaries['Department'], salaries['Salary or Hourly']).sort_values(by='Hourly', ascending=False).head()\n",
+    "# Streests & San is thus the departmeny with the highest number of hourly workers"
    ]
   },
   {
@@ -176,7 +589,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "streets = np.random.normal(salaries.loc[salaries['Department'] =='STREETS & SAN'.mean(),salaries['Hourly Rate'].std() , 1862)\n",
+    "ttest_1samp(streets, 35)\n",
+    "                                        salaries.loc[salaries['Department'] =='STREETS & SAN', 'Hourly Rate']"
    ]
   },
   {
